fix: margin, gap

--- a/containers/Blog/Blog.scss
+++ b/containers/Blog/Blog.scss
@@ -15,10 +15,10 @@
     }
 
     .categories {
-      @apply flex flex-col md:flex-row items-center md:items-start justify-center gap-[50px] md:gap-[50px] mb-12 md:mb-24;
+      @apply flex flex-col md:flex-row items-center md:items-start justify-center gap-[25px] md:gap-[50px] mb-6 md:mb-24;
 
       .category {
-        @apply w-[150px] h-[212px] md:w-[300px] md:h-[424px] mb-4 md:mb-[initial];
+        @apply w-[150px] h-full md:w-[300px] md:h-[424px];
 
         img {
           @apply w-[150px] h-[104.5px] md:w-[300px] md:h-[209px] mb-3 md:mb-6;
@@ -33,11 +33,11 @@
         }
 
         .category-message {
-          @apply font-openSans font-normal text-xs md:text-xl md:leading-8 h-[80px] md:h-[120px] text-center md:text-start;
+          @apply font-openSans font-normal text-xs md:text-xl md:leading-8 mb-4 md:mb-[initial] md:h-[120px] text-center md:text-start;
         }
 
         .categories-icon {
-          @apply flex items-start justify-start gap-3;
+          @apply flex justify-center items-start md:justify-start gap-3;
 
           img {
             @apply w-4 h-4 md:w-8 md:h-8;
